--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "jszip": "^3.10.1",
     "node-fetch": "^3.3.2",
     "os": "^0.1.2",
+    "path": "^0.12.7",
     "process": "^0.11.10",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "webpack": "^5.92.1"
   }
 }
