--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '10.8.2'
+        node-version: 'latest'
 
     - name: Install dependencies
       run: npm ci
